--- a/routing-front/src/app/app.component.html
+++ b/routing-front/src/app/app.component.html
@@ -3,6 +3,8 @@
     <th>Code</th>
   </tr>
   <tr>
-    <td>hello</td>
+    <td>
+      <a routerLink="accounts">name</a>
+    </td>
   </tr>
 </table>
