crated users table and implamened with server

--- a/routing-front/src/app/app.component.html
+++ b/routing-front/src/app/app.component.html
@@ -1,10 +1,1 @@
-<table p-table>
-  <tr>
-    <th>Code</th>
-  </tr>
-  <tr>
-    <td>
-      <a routerLink="accounts">name</a>
-    </td>
-  </tr>
-</table>
+<router-outlet></router-outlet>
