--- a/routing-front/src/app/user-table/user-table.component.html
+++ b/routing-front/src/app/user-table/user-table.component.html
@@ -1,1 +1,18 @@
-<p>user-table works!</p>
+<table p-table>
+    <tr p-Template="header">
+        <th>Id</th>
+    </tr>
+    <tr>
+        <th>Name</th>
+        <td>name</td>
+    </tr>
+    <tr>
+        <th>Owner</th>      
+    </tr>
+    <tr>
+        <th>Created On</th>
+    </tr>
+    <tr>
+        <th>Updated on</th>   
+    </tr>
+  </table>
