created users table and implemented with server

--- a/routing-front/src/app/user-table/user-table.component.html
+++ b/routing-front/src/app/user-table/user-table.component.html
@@ -1,18 +1,8 @@
-<table p-table>
-    <tr p-Template="header">
-        <th>Id</th>
-    </tr>
-    <tr>
-        <th>Name</th>
-        <td>name</td>
-    </tr>
-    <tr>
-        <th>Owner</th>      
-    </tr>
-    <tr>
-        <th>Created On</th>
-    </tr>
-    <tr>
-        <th>Updated on</th>   
-    </tr>
-  </table>
+<p-table [value]="usersTabledata" styleClass="p-datatable-gridlines">
+    <ng-template pTemplate="body" let-item>
+        <tr>
+            <td>{{item.label}}</td>
+            <td>{{item.value}}</td>
+        </tr>
+    </ng-template>
+</p-table>
