--- a/routing-front/src/app/users-table/users-table.component.html
+++ b/routing-front/src/app/users-table/users-table.component.html
@@ -1,23 +1,22 @@
-<table p-table >
-  <tr p-Template="header">
+<p-table [value]="users" styleClass="p-datatable-gridlines">
+  <ng-template pTemplate="header">
+  <tr>
     <th>Id</th>
     <th>Name</th>
     <th>Created On</th>
     <th>Owner</th>
     <th>Action</th>  
   </tr>
-  <tr *ngFor="let user of users" p-Template="body">
-    <td>  
-      {{user.id}}
-    </td>
-    <td>  
-      {{user.name}}
-    </td>
-    <td>  
-      {{user.createdDate}}
-    </td>
-    <td>
-      <a [routerLink]="['/accounts' + user.id]">View</a>
-    </td>
-  </tr>
-</table>
+  </ng-template>
+  <ng-template pTemplate="body" let-user>
+    <tr *ngFor="let user of users" p-Template="body">
+      <td>{{user.userId}}</td>
+      <td>{{user.name}}</td>
+      <td>{{user.Owner}}</td>
+      <td>{{user.createdDate}}</td>
+      <td>
+        <a [routerLink]="'/accounts/' + user.userId">View</a>
+      </td> 
+    </tr>
+  </ng-template>
+</p-table>
